<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetMoneyFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/app_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="24dp"
                app:titleTextColor="@color/white"
                app:title="">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato"
                    android:text="@string/toolbar_text"
                    android:textColor="@color/app_yellow"
                    android:textSize="14sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_hamburger" />

            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/card_icon"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/top_panel_text1"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chain_icon" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/lato"
                        android:text="@string/top_panel_text2"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_panel_text3"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_panel_text4"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:layout_gravity="clip_vertical"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bank_card"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingStart="80dp"
            android:paddingTop="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Number:"
                android:textColor="@color/app_yellow"
                android:textSize="14sp"
                android:paddingStart="80dp"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/card_number_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="20dp"
                android:width="140dp"
                android:layout_marginStart="10dp"
                android:hint="0000 00000 0000 0000"
                android:textSize="12sp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:inputType="number"/>
        </LinearLayout>

        <ImageView
            android:layout_width="230dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/black"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Valid trough:"
                android:textColor="@color/app_yellow"
                android:textSize="14sp"
                android:paddingStart="80dp"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/month_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:height="20dp"
                android:width="30dp"
                android:layout_marginStart="10dp"
                android:hint="02"
                android:textSize="12sp"
                android:paddingStart="5dp"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/year_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:height="20dp"
                android:width="50dp"
                android:layout_marginStart="5dp"
                android:hint="2012"
                android:textSize="12sp"
                android:paddingStart="5dp"
                android:inputType="number" />
        </LinearLayout>

        <ImageView
            android:layout_width="230dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/black"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CVV:"
                android:textColor="@color/app_yellow"
                android:textSize="14sp"
                android:paddingStart="80dp"
                android:paddingTop="10dp"/>

            <EditText
                android:id="@+id/cvv_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:width="50dp"
                android:height="20dp"
                android:hint="123"
                android:inputType="number"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lock"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="LOCK CARD"
                android:textColor="@color/app_yellow"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>